# worktree-cleaner

./: .gitignore  CLAUDE.md  Cargo.toml  ONBOARDING.md  README.md  package-lock.json
.github/workflows/: bump-homebrew.yml  publish.yml
src/: delete.rs  main.rs  scan.rs  score.rs  size.rs  testutil.rs  tui.rs  worktree.rs
